kubernetes/default/yuvomi/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yuvomi
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: http
  hostnames:
    - family.whoverse.nexus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: yuvomi
          port: 3000
